@@ -59,7 +59,7 @@ $upload_dir = $sys_ftp_upload_dir . "/" . $g->getUnixName();
 
 if (getStringFromRequest('submit')) {
 	if ($editdoc) {
-		$doc_group = getStringFromRequest('doc_group');
+		$doc_group = getIntFromRequest('doc_group');
 		$title = getStringFromRequest('title');
 		$description = getStringFromRequest('description');
 		$language_id = getIntFromRequest('language_id');
@@ -110,8 +110,8 @@ if (getStringFromRequest('submit')) {
 		$feedback = _('Updated successfully');
 
 	} elseif (getStringFromRequest('editgroup')) {
-		$doc_group = getStringFromRequest('doc_group');
-		$groupname = getIntFromRequest('groupname');
+		$doc_group = getIntFromRequest('doc_group');
+		$groupname = getStringFromRequest('groupname');
 		$parent_doc_group = getIntFromRequest('parent_doc_group');
 		
 		$dg = new DocumentGroup($g,$doc_group);
@@ -394,8 +394,8 @@ if ($editdoc && $docid) {
 //	Edit a specific doc group
 //
 //
-} elseif (getStringFromRequest('editgroup') && getStringFromRequest('doc_group')) {
-	$doc_group = getStringFromRequest('doc_group');
+} elseif (getStringFromRequest('editgroup') && getIntFromRequest('doc_group')) {
+	$doc_group = getIntFromRequest('doc_group');
 	
 	$dg = new DocumentGroup($g,$doc_group);
 	if ($dg->isError()) {
